--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,12 @@
 body {
-    height: 100%;
+    /*height: 100%;*/
     color: #5a5a5a;
 }
 
 #footer {
-    /*padding-top: 10px;*/
+    background: #f2f2f2;
+    position: relative;
+    min-height:5%;
     bottom: 0;
     margin-bottom: 0;
     width: 100%;
@@ -17,7 +19,7 @@ body {
 }
 
 #container {
-    min-height: 100%;
+    min-height: 95%;
     padding-top: 80px;
     padding-bottom: 50px;
 }
