--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
     {#    <link rel="stylesheet" type="text/css" href="{% static "css/font-awesome.min.css" %}">#}
     <script src="{% static "js/bootstrap.js" %}" type="text/javascript"></script>
-{#    <script src="{% static "js/jquery.min.js" %}" ></script>#}
-{#    <script src="{% static "js/jquery.chained.min.js" %}"></script>#}
-{#    <script src="{% static "js/hockey_club.js" %}"></script>#}
+    {#    <script src="{% static "js/jquery.min.js" %}" ></script>#}
+    {#    <script src="{% static "js/jquery.chained.min.js" %}"></script>#}
+    {#    <script src="{% static "js/hockey_club.js" %}"></script>#}
     {#    <script src="{% static "js/news-slider.js" %}" type="text/javascript"></script>#}
     {#    <link rel="stylesheet" type="text/css" href="{% static "css/news-slider.css" %}">#}
 </head>
@@ -69,12 +69,13 @@
         </div>
     </div>
 </div>
-    {% block content %}
-    {% endblock %}
-<div class="panel-footer" id="footer">
+{% block content %}
+{% endblock %}
+
+<footer id="footer">
     <div class="container">
-        <p>Some footer</p>
+        <p style="margin-top: 15px">Hockey club</p>
     </div>
-</div>
+</footer>
 </body>
 </html>
